--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -2,11 +2,13 @@
   "name": "frontend",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p 3001",
+    "lint": "eslint . --cache",
+    "lint:fix": "eslint . --cache --fix"
   },
   "dependencies": {
     "next": "13.4.1",
