--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,15 +14,17 @@
     "@tsconfig/node16": "1.0.4",
     "@types/express": "4.17.17",
     "@types/node": "17.0.12",
-    "concurrently": "^8.0.1",
+    "concurrently": "8.0.1",
     "nodemon": "2.0.22",
     "rimraf": "5.0.0",
-    "ts-node-dev": "^2.0.0",
-    "tsc-alias": "^1.8.6",
-    "tsconfig-paths": "^4.2.0",
+    "ts-node-dev": "2.0.0",
+    "tsc-alias": "1.8.6",
+    "tsconfig-paths": "4.2.0",
     "typescript": "4.5.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "4.14.1",
+    "express": "4.18.2",
+    "prisma": "4.14.1"
   }
 }
