chore: added db:migrate:dev

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./dist/index.js",
+    "db:migrate:dev": "prisma migrate dev",
     "dev": "concurrently \"npx tsc -w\" \"nodemon dist/index.js\"",
     "prebuild": "rimraf dist",
     "build": "npx tsc",
