--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,9 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**"]
     },
+    "db:migrate:dev": {
+      "outputs": []
+    },
     "lint": {
       "outputs": []
     },
