--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./dist/index.js",
+    "start": "node ./dist/src/index.js",
     "db:migrate:dev": "prisma migrate dev",
-    "dev": "concurrently \"npx tsc -w\" \"nodemon dist/index.js\"",
+    "dev": "concurrently \"npx tsc -w\" \"tsc-alias -w\" \"nodemon dist/src/index.js\"",
+    "generate": "prisma generate",
     "prebuild": "rimraf dist",
-    "build": "npx tsc",
+    "build": "npx tsc && tsc-alias",
     "lint": "eslint . --cache",
     "lint:fix": "eslint . --cache --fix"
   },
@@ -26,6 +27,8 @@
   "dependencies": {
     "@prisma/client": "4.14.1",
     "express": "4.18.2",
-    "prisma": "4.14.1"
+    "prisma": "4.14.1",
+    "prisma-zod-generator": "0.8.11",
+    "zod": "3.21.4"
   }
 }
