--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "turbo run dev",
     "dev:frontend": "turbo run dev --filter frontend",
     "dev:backend": "turbo run dev --filter backend",
+    "generate": "turbo run generate --filter backend",
     "lint": "turbo run lint",
     "lint:frontend": "turbo run lint --filter frontend",
     "lint:backend": "turbo run lint --filter backend",
