--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -12,7 +12,7 @@
     "strict": true,
     "moduleResolution": "node",
     "skipLibCheck": true,
-    "typeRoots": ["./node_modules/@types", "../../node_modules/@types", "./src/typings"],
+    "typeRoots": ["./node_modules/@types", "../../node_modules/@types"],
     "baseUrl": ".",
     "paths": {
       "@schemas": ["prisma/generated/schemas/index.ts"],
