--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "clean": "npx rimraf@3 -- --./apps/**/.turbo ./node_modules ./package-lock.json ./apps/**/.next ./apps/**/dist ./apps/**/node_modules ./packages/**/dist ./packages/**/node_modules",
+    "clean": "npx rimraf@3 -- --./apps/**/.turbo ./node_modules ./pnpm-lock.yaml ./apps/**/.next ./apps/**/dist ./apps/**/node_modules ./packages/**/dist ./packages/**/node_modules",
     "db:migrate:dev": "turbo run db:migrate:dev --filter backend",
     "dev": "turbo run dev",
     "dev:frontend": "turbo run dev --filter frontend",
