--- a/packages/dto/tsconfig.json
+++ b/packages/dto/tsconfig.json
@@ -13,6 +13,10 @@
     "moduleResolution": "node",
     "skipLibCheck": true,
     "typeRoots": ["./node_modules/@types", "../../node_modules/@types"],
+    "baseUrl": ".",
+    "paths": {
+      "@schemas/*": ["prisma/schemas/*"],
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules/", "src/**/*.spec.ts", "src/tests/**/*"],
