--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,6 +13,7 @@
     "lint:fix": "eslint . --cache --fix"
   },
   "devDependencies": {
+    "@pharmacy-crud/dto": "workspace:*",
     "@tsconfig/node16": "1.0.4",
     "@types/express": "4.17.17",
     "@types/node": "17.0.12",
