--- a/packages/dto/package.json
+++ b/packages/dto/package.json
@@ -2,9 +2,10 @@
   "name": "@pharmacy-crud/dto",
   "version": "1.0.0",
   "type": "module",
-  "main": "dist/src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc && tsc-alias",
+    "build": "tsup src/index.ts --dts && tsc-alias",
     "prebuild": "rimraf dist"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "@types/node": "17.0.12",
     "rimraf": "5.0.0",
     "tsc-alias": "1.8.6",
+    "tsup": "6.7.0",
     "typescript": "4.5.3"
   }
 }
