--- a/packages/dto/package.json
+++ b/packages/dto/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --dts && tsc-alias",
+    "build": "tsup index.ts --dts && tsc-alias",
     "prebuild": "rimraf dist"
   },
   "dependencies": {
