--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "start": "node ./dist/src/index.js",
     "db:migrate:dev": "prisma migrate dev",
-    "dev": "concurrently \"npx tsc -w\" \"tsc-alias -w\" \"nodemon dist/src/index.js\"",
+    "dev": "ts-node-dev --respawn -r tsconfig-paths/register --transpile-only --no-notify ./src/index.ts & pnpm run watch:deps",
+    "watch:deps": "nodemon -e ts --watch '../../packages/dto/src/' --exec 'cd ../../packages/dto && pnpm run build'",
     "generate": "prisma generate",
     "prebuild": "rimraf dist",
-    "build": "npx tsc && tsc-alias",
+    "build": "tsc && tsc-alias",
     "lint": "eslint . --cache",
     "lint:fix": "eslint . --cache --fix"
   },
@@ -17,10 +18,11 @@
     "@tsconfig/node16": "1.0.4",
     "@types/express": "4.17.17",
     "@types/node": "17.0.12",
-    "concurrently": "8.0.1",
     "nodemon": "2.0.22",
     "rimraf": "5.0.0",
+    "ts-node-dev": "2.0.0",
     "tsc-alias": "1.8.6",
+    "tsconfig-paths": "4.2.0",
     "typescript": "4.5.3"
   },
   "dependencies": {
