--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@prisma/client": "4.14.1",
+    "dotenv": "16.0.3",
     "express": "4.18.2",
     "prisma": "4.14.1",
     "prisma-zod-generator": "0.8.11",
