--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -9,6 +9,7 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "paths": {
+      "@components/*": ["components/*"],
       "@features/*": ["features/*"],
     }
   },
