--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "3.1.0",
     "@mantine/core": "6.0.11",
     "@mantine/next": "6.0.11",
+    "axios": "1.4.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
