--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "3.1.0",
     "@mantine/core": "6.0.11",
     "@mantine/next": "6.0.11",
+    "@tanstack/react-query": "4.29.7",
     "axios": "1.4.0",
     "next": "13.4.1",
     "react": "18.2.0",
@@ -25,6 +26,7 @@
     "@pharmacy-crud/dto": "workspace:*",
     "@pharmacy-crud/eslint-config-frontend": "workspace:*",
     "@pharmacy-crud/tsconfig-frontend": "workspace:*",
+    "@tanstack/react-query-devtools": "4.29.7",
     "@types/node": "17.0.12",
     "@types/react": "18.0.22",
     "@types/react-dom": "18.0.7",
