--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@pharmacy-crud/dto": "workspace:*",
     "@tsconfig/node16": "1.0.4",
+    "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
     "@types/node": "17.0.12",
     "nodemon": "2.0.22",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "@prisma/client": "4.14.1",
+    "cors": "2.8.5",
     "dotenv": "16.0.3",
     "express": "4.18.2",
     "prisma": "4.14.1",
