--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,7 @@
     "@mantine/core": "6.0.11",
     "@mantine/next": "6.0.11",
     "@tanstack/react-query": "4.29.7",
+    "@tanstack/react-table": "8.9.1",
     "axios": "1.4.0",
     "next": "13.4.1",
     "react": "18.2.0",
