--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -12,6 +12,7 @@
       "@api/*": ["api/*"],
       "@components/*": ["components/*"],
       "@features/*": ["features/*"],
+      "@utils/*": ["utils/*"],
     }
   },
   "exclude": [
