--- a/packages/dto/package.json
+++ b/packages/dto/package.json
@@ -1,22 +1,25 @@
 {
   "name": "@pharmacy-crud/dto",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "files": [
+    "dist/**"
+  ],
   "scripts": {
-    "build": "tsup index.ts --dts && tsc-alias",
-    "prebuild": "rimraf dist"
+    "build": "tsup",
+    "clean": "rimraf .turbo node_modules dist",
+    "dev": "tsup"
   },
   "dependencies": {
-    "@prisma/client": "4.14.1",
-    "zod": "3.21.4"
+    "@pharmacy-crud/prisma-client": "workspace:*"
   },
   "devDependencies": {
-    "@types/node": "17.0.12",
-    "rimraf": "5.0.0",
-    "tsc-alias": "1.8.6",
+    "@types/node": "20.2.5",
+    "rimraf": "5.0.1",
     "tsup": "6.7.0",
-    "typescript": "4.5.3"
+    "typescript": "5.1.3"
   }
 }
