--- a/packages/dto/tsconfig.json
+++ b/packages/dto/tsconfig.json
@@ -1,26 +1,24 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Node 16",
   "compilerOptions": {
-    "esModuleInterop": true,
-    "outDir": "./dist",
-    "removeComments": true,
-    "sourceMap": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "strictBindCallApply": true,
-    "noImplicitOverride": true,
-    "resolveJsonModule": true,
+    "lib": ["ES2021"],
+    "module": "commonjs",
+    "target": "ES2021",
     "strict": true,
-    "moduleResolution": "node",
+    "esModuleInterop": true,
     "skipLibCheck": true,
-    "typeRoots": ["./node_modules/@types", "../../node_modules/@types"],
-    "baseUrl": ".",
-    "paths": {
-      "@schemas/*": ["prisma/schemas/*"],
-    }
+    "forceConsistentCasingInFileNames": true,
+    "composite": false,
+    "declaration": true,
+    "declarationMap": true,
+    "inlineSources": false,
+    "isolatedModules": true,
+    "moduleResolution": "node",
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "preserveWatchOutput": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules/", "src/**/*.spec.ts", "src/tests/**/*"],
-  "ts-node": {
-    "require": ["tsconfig-paths/register"]
-  }
+  "include": ["**/*.ts", "tsup.config.ts"],
+  "exclude": ["node_modules"]
 }
