--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "3.1.0",
     "@mantine/core": "6.0.13",
     "@mantine/next": "6.0.13",
+    "@pharmacy-crud/dto": "workspace:*",
     "@pharmacy-crud/prisma-client": "workspace:*",
     "@tanstack/react-query": "4.29.12",
     "@tanstack/react-table": "8.9.1",
