--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "@pharmacy-crud/eslint-config-frontend",
+  "name": "@pharmacy-crud/eslint-config",
   "version": "1.0.0",
-  "main": "index.js",
+  "exports": {
+    "./base" : "./base.js",
+    "./frontend" : "./frontend.js"
+  },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "5.59.8",
     "eslint-config-next": "13.4.4",
