--- a/packages/prisma-client/package.json
+++ b/packages/prisma-client/package.json
@@ -29,6 +29,7 @@
     "prisma": "4.15.0"
   },
   "devDependencies": {
+    "@pharmacy-crud/eslint-config": "workspace:*",
     "@types/node": "20.2.5",
     "rimraf": "5.0.1",
     "tsup": "6.7.0",
