refactor: separated prisma client

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@actions/*": ["src/actions/*"],
+      "@prismaClient": ["src/prismaClient/index.ts"],
     }
   },
   "include": ["src/**/*"],
