feat: format to dollar currency

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -11,7 +11,9 @@
     "paths": {
       "@api/*": ["api/*"],
       "@components/*": ["components/*"],
+      "@const/*": ["const/*"],
       "@features/*": ["features/*"],
+      "@layout/*": ["layout/*"],
       "@utils/*": ["utils/*"],
     }
   },
