--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "website",
   "version": "1.0.0",
   "private": true,
   "type": "module",
@@ -20,6 +20,8 @@
     "@tanstack/react-table": "8.9.1",
     "axios": "1.4.0",
     "next": "13.4.4",
+    "@prisma/client": "4.15.0",
+    "prisma": "4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.44.3",
