--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -15,6 +15,7 @@
       "@features/*": ["features/*"],
       "@layout/*": ["layout/*"],
       "@utils/*": ["utils/*"],
+      "@dto": ["dto/index.ts"],
     }
   },
   "exclude": [
