--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -11,6 +11,7 @@
     "paths": {
       "@api/*": ["api/*"],
       "@components/*": ["components/*"],
+      "@config/*": ["config/*"],
       "@const/*": ["const/*"],
       "@features/*": ["features/*"],
       "@layout/*": ["layout/*"],
