--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "extends": "@pharmacy-crud/tsconfig-frontend",
   "include": [
     "next-env.d.ts",
     "**/*.ts",
@@ -7,6 +6,20 @@
     ".next/types/**/*.ts"
   ],
   "compilerOptions": {
+    "target": "esnext",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
     "baseUrl": "./src",
     "paths": {
       "@api/*": ["api/*"],
