--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,11 +1,7 @@
 {
   "name": "@pharmacy-crud/eslint-config",
   "version": "1.0.0",
-  "exports": {
-    "./base" : "./base.js",
-    "./backend" : "./backend.js",
-    "./frontend" : "./frontend.js"
-  },
+  "main": "index.js",
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "5.59.8",
     "eslint-config-next": "13.4.4",
