fix: missing generate turbo script

--- a/turbo.json
+++ b/turbo.json
@@ -17,6 +17,9 @@
     "db:migrate:dev": {
       "outputs": []
     },
+    "generate": {
+      "outputs": []
+    },
     "lint": {
       "outputs": []
     },
