--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -16,11 +16,12 @@
     "@hookform/resolvers": "3.1.0",
     "@mantine/core": "6.0.13",
     "@mantine/next": "6.0.13",
+    "@mantine/spotlight": "6.0.13",
+    "@prisma/client": "4.15.0",
     "@tanstack/react-query": "4.29.12",
     "@tanstack/react-table": "8.9.1",
     "axios": "1.4.0",
     "next": "13.4.4",
-    "@prisma/client": "4.15.0",
     "prisma": "4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
