fix: pass id as a page prop

--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -27,6 +27,7 @@
       "@config/*": ["config/*"],
       "@const/*": ["const/*"],
       "@features/*": ["features/*"],
+      "@hocs/*": ["hocs/*"],
       "@layout/*": ["layout/*"],
       "@utils/*": ["utils/*"],
       "@dto": ["dto/index.ts"],
