--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "4.29.12",
     "@tanstack/react-table": "8.9.1",
     "axios": "1.4.0",
+    "framer-motion": "10.12.16",
     "next": "13.4.4",
     "prisma": "4.15.0",
     "react": "18.2.0",
