--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -18,6 +18,7 @@
     "@mantine/next": "6.0.13",
     "@mantine/spotlight": "6.0.13",
     "@prisma/client": "4.15.0",
+    "@tabler/icons-react": "2.22.0",
     "@tanstack/react-query": "4.29.12",
     "@tanstack/react-table": "8.9.1",
     "axios": "1.4.0",
