--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -23,8 +23,11 @@
     "@tanstack/react-query": "4.29.12",
     "@tanstack/react-table": "8.9.1",
     "axios": "1.4.0",
+    "bcrypt": "5.1.0",
     "framer-motion": "10.12.16",
+    "jsonwebtoken": "9.0.0",
     "next": "13.4.4",
+    "nookies": "2.5.2",
     "prisma": "4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,6 +37,8 @@
   "devDependencies": {
     "@pharmacy-crud/eslint-config": "workspace:*",
     "@tanstack/react-query-devtools": "4.29.12",
+    "@types/bcrypt": "5.0.0",
+    "@types/jsonwebtoken": "9.0.2",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
